added instructions in readme.txt