@@ -1,2 +1,12 @@
 # Platformer
 2D Platformer Game
+
+This project was to learn about using javafx and concepts such as handling framerate, unit collision, and simulating momentum/physics.
+
+This project requires java to run.
+
+This project can be compiled and run through a terminal by navigating the the folder of THIS file, and then using the commands:
+
+javac --module-path lib\javafx-sdk-11.0.2\lib --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web game.java
+
+java --module-path lib\javafx-sdk-11.0.2\lib --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web game.java
